--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StarGazer's Society</title>
     <!-- external css -->
-    <link rel="stylesheet" src="css/style.css">
-    <link rel="stylesheet" src="css/normalize.css">
-    
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+
 </head>
 <body>
 
-    <script src="js/main.js" type="javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
