Add basic HTML layout

--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
 
 </head>
 <body>
+    <h1>StarGazer Society's!</h1>
+    <p>Want to see a far out picture of the day hosted by NASA?</p>
+    <p>Find out what today's Picture Of The Day is below, or go back in time if you're curious.</p>
+
+
+    <input type="date" name="" value="">
+    <button type="button" name="button"> Show Me!</button>
+    
+    <section id="space-image">
+        <img src="" alt="">
+    </section>
+
+    <section id="description">
+        <p></p>
+
+    </section>
+
+
 
     <script src="js/main.js" type="text/javascript"></script>
 </body>
