Add id's and sections to HTML

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <input type="date" name="" value="">
     <button type="button" name="button"> Show Me!</button>
     
-    <section id="space-image">
-        <img src="" alt="">
+    <section id="space-images space-videos">
+        <img id="image" src="" alt="">
+        <iframe id="video" src="" frameborder="0"></iframe>
     </section>
 
     <section id="description">
