Change id for img and video section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <input type="date" name="" value="">
     <button type="button" name="button"> Show Me!</button>
     
-    <section id="space-images space-videos">
+    <section id="space">
         <img id="image" src="" alt="">
         <iframe id="video" src="" frameborder="0"></iframe>
     </section>
